replaced psy6136 icon

--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,7 @@ colorize <- function(x, color) {
 
 
 <center>
-<img src="icons/psy6136.png" width="100px"/>
+<img src="icons/psy6136-highres.png" width="100px"/>
 </center>
 
 ## Course Description 
