--- a/index.Rmd
+++ b/index.Rmd
@@ -40,18 +40,33 @@ Course and lecture topics are listed below, in a visual overview.
 
 ![](images/headers/bertifier.png)
 
-#### Topics:  `r icon::fa("list", color="darkgreen")`
+<!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
+
+<div style="display:flex">
+  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
+  <h4>Topics</h4>
+</div>
 
 - Course outline, books, R
 - What is categorical data?
 - Categorical data analysis: methods & models
 - Graphical methods
 
-#### Lecture notes  `r icon::fa("file-pdf", color="red")` 
+<!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
+<div style="display:flex">
+  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
+  <h4>Lecture notes</h4>
+</div>
+
 - [1up PDF](lectures/01-Overview.pdf) || [4up PDF](lectures/01-Overview-2x2.pdf)
 
 
-#### Readings: `r icon::fa("book-reader", color="blue")` 
+<!-- #### Readings: `r icon::fa("book-reader", color="blue")`  -->
+<div style="display:flex">
+  <i class="fas fa-book-reader" style="color:blue; font-size: 1.25em;"></i> &nbsp;
+  <h4>Readings</h4>
+</div>
+
 **Bold face** items are considered essential. When there are assignments,
 some supplementary readings are mentioned there.
 
@@ -65,7 +80,12 @@ some supplementary readings are mentioned there.
 
 ![](images/headers/dpois-xyplot.png)
 
-#### Topics: `r icon::fa("list", color="darkgreen")` 
+<!-- #### Topics: `r icon::fa("list", color="darkgreen")`  -->
+
+<div style="display:flex">
+  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
+  <h4>Topics</h4>
+</div>
 
 - Discrete distributions: Basic ideas
 - Fitting discrete distributions
@@ -73,12 +93,19 @@ some supplementary readings are mentioned there.
 - Robust distribution plots
 - Looking ahead
 
-#### Lecture notes  `r icon::fa("file-pdf", color="red")` 
+<!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
+<div style="display:flex">
+  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
+  <h4>Lecture notes</h4>
+</div>
+
 - [1up PDF](lectures/02-Discrete.pdf) || [4up PDF](lectures/02-Discrete-2x2.pdf)
 
-#### Readings: `r icon::fa("book-reader", color="blue")` 
-**Bold face** items are considered essential. When there are assignments,
-some supplementary readings are mentioned there.
+<!-- #### Readings: `r icon::fa("book-reader", color="blue")`  -->
+<div style="display:flex">
+  <i class="fas fa-book-reader" style="color:blue; font-size: 1.25em;"></i> &nbsp;
+  <h4>Readings</h4>
+</div>
 
 - **DDAR**: [Ch 3](VCDR/chapter03.pdf)
 
@@ -91,7 +118,12 @@ some supplementary readings are mentioned there.
 
 ![](images/headers/twoway.png)
 
-#### Topics:  `r icon::fa("list", color="darkgreen")`
+<!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
+
+<div style="display:flex">
+  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
+  <h4>Topics</h4>
+</div>
 
 - Overview: $2 \times 2$, $r \times c$, ordered tables
 - Independence
@@ -101,13 +133,23 @@ some supplementary readings are mentioned there.
 - Looking ahead: models
 
 
-#### Lecture notes  `r icon::fa("file-pdf", color="red")` 
+<!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
+<div style="display:flex">
+  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
+  <h4>Lecture notes</h4>
+</div>
+
 - [1up PDF](lectures/03-Twoway1.pdf) || [4up PDF](lectures/03-Twoway1-2x2.pdf)
+- [Tutorial on two way tables](tutorials/twoway.pdf)
 
-#### Readings: `r icon::fa("book-reader", color="blue")` 
+<!-- #### Readings: `r icon::fa("book-reader", color="blue")`  -->
+<div style="display:flex">
+  <i class="fas fa-book-reader" style="color:blue; font-size: 1.25em;"></i> &nbsp;
+  <h4>Readings</h4>
+</div>
 
-- **DDAR**: [Ch 1](VCDR/chapter01.pdf), [Ch 2](VCDR/chapter02.pdf)
-- **Agresti, Ch 1**
+- **DDAR**: [Ch 4](VCDR/chapter04.pdf)
+- **Agresti, Ch 2**
 
 #### Quiz: `r icon::fa("building", color="brown")` 
 
@@ -118,7 +160,12 @@ some supplementary readings are mentioned there.
 ![](images/headers/loglin.png)
 
 
-#### Topics:  `r icon::fa("list", color="darkgreen")`
+<!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
+
+<div style="display:flex">
+  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
+  <h4>Topics</h4>
+</div>
 
 - Mosaic displays: Basic ideas
 - Loglinear models
@@ -127,21 +174,36 @@ some supplementary readings are mentioned there.
 - survival on the _Titanic_
 - Sequential plots & models
 
-#### Lecture notes  `r icon::fa("file-pdf", color="red")` 
+<!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
+<div style="display:flex">
+  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
+  <h4>Lecture notes</h4>
+</div>
+
 - [1up PDF](lectures/04-Loglin.pdf) || [4up PDF](lectures/04-Loglin-2x2.pdf)
 
 ## Correspondence Analysis
 
 ![](images/headers/corresp.png)
 
-#### Topics:  `r icon::fa("list", color="darkgreen")`
+<!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
+
+<div style="display:flex">
+  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
+  <h4>Topics</h4>
+</div>
 
 - CA: Basic ideas
 - Singular value decomposition (SVD)
 - Optimal category scores
 - Multiway tables: MCA
 
-#### Lecture notes  `r icon::fa("file-pdf", color="red")` 
+<!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
+<div style="display:flex">
+  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
+  <h4>Lecture notes</h4>
+</div>
+
 - [1up PDF](lectures/05-Corresp.pdf) || [4up PDF](lectures/05-Corresp-2x2.pdf)
 
 
@@ -149,7 +211,12 @@ some supplementary readings are mentioned there.
 
 ![](images/headers/logistic.png)
 
-#### Topics:  `r icon::fa("list", color="darkgreen")`
+<!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
+
+<div style="display:flex">
+  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
+  <h4>Topics</h4>
+</div>
 
 - Model-based methods: Overview
 - Logistic regression: one predictor, multiple predictors, fitting
@@ -158,7 +225,12 @@ some supplementary readings are mentioned there.
 - Case study: Racial profiling
 - Model diagnostics
 
-#### Lecture notes  `r icon::fa("file-pdf", color="red")` 
+<!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
+<div style="display:flex">
+  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
+  <h4>Lecture notes</h4>
+</div>
+
 - [1up PDF](lectures/06-Logistic.pdf) || [4up PDF](lectures/06-Logistic-2x2.pdf)
 
 
@@ -167,7 +239,11 @@ some supplementary readings are mentioned there.
 ![](images/headers/logistic2.png)
 
 
-#### Topics:  `r icon::fa("list", color="darkgreen")`
+<!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
+<div style="display:flex">
+  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
+  <h4>Topics</h4>
+</div>
 
 - Case study: Survival in the Donner party
 - Polytomous response models
@@ -175,7 +251,12 @@ some supplementary readings are mentioned there.
   + Nested dichotomies
   + Multinomial models
 
-#### Lecture notes  `r icon::fa("file-pdf", color="red")` 
+<!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
+<div style="display:flex">
+  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
+  <h4>Lecture notes</h4>
+</div>
+
 - [1up PDF](lectures/07-Logistic2.pdf) || [4up PDF](lectures/07-Logistic2-2x2.pdf)
 
 
@@ -183,7 +264,11 @@ some supplementary readings are mentioned there.
 
 ![](images/headers/loglin2.png)
 
-#### Topics:  `r icon::fa("list", color="darkgreen")`
+<!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
+<div style="display:flex">
+  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
+  <h4>Topics</h4>
+</div>
 
 - Logit models for response variables
 - Models for ordinal factors
@@ -191,7 +276,12 @@ some supplementary readings are mentioned there.
 - Models for square tables
 - More complex models
 
-#### Lecture notes  `r icon::fa("file-pdf", color="red")` 
+<!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
+<div style="display:flex">
+  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
+  <h4>Lecture notes</h4>
+</div>
+
 - [1up PDF](lectures/08-Loglin2.pdf) || [4up PDF](lectures/08-Loglin2-2x2.pdf)
 
 
@@ -200,7 +290,11 @@ some supplementary readings are mentioned there.
 ![](images/headers/countdata.png)
 
 
-#### Topics:  `r icon::fa("list", color="darkgreen")`
+<!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
+<div style="display:flex">
+  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
+  <h4>Topics</h4>
+</div>
 
 - Generalized linear models: Families & links
 - GLMs for count data
@@ -208,7 +302,12 @@ some supplementary readings are mentioned there.
 - Overdispersion
 - Excess zeros
 
-#### Lecture notes  `r icon::fa("file-pdf", color="red")` 
+<!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
+<div style="display:flex">
+  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
+  <h4>Lecture notes</h4>
+</div>
+
 - [1up PDF](lectures/09-CountData.pdf) || [4up PDF](lectures/09-CountData-2x2.pdf)
 
 
